tests/negative/gold/invoke-var-test.gold
tests/negative/invoke-var-test.toit:14:3: error: Can't invoke local variable 'local'
  local 1
  ^~~~~
tests/negative/invoke-var-test.toit:15:3: error: Can't invoke global variable 'global'
  global 2
  ^~~~~~
tests/negative/invoke-var-test.toit:16:3: error: Can't use prefix 'pre' as an expression
  pre 3
  ^~~
tests/negative/invoke-var-test.toit:17:6: error: Can't invoke global variable 'global'
  pre.global 4
     ^~~~~~~
tests/negative/invoke-var-test.toit:18:4: error: Can't invoke global variable 'static-field'
  A.static-field 5
   ^~~~~~~~~~~~~
tests/negative/invoke-var-test.toit:19:8: error: Can't invoke global variable 'static-field'
  pre.A.static-field 6
       ^~~~~~~~~~~~~
Compilation failed
